[metadata]
name = gptrun
version = 0.0.1
description = Use GPT3 as a python function
long_description = file: README.rst
keywords = ai, gpt3, production-ready
license = Apache
classifiers =
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
py_modules =
    gptrun
install_requires =
    openai

